[package]
name = "gachaverse"
version = "0.0.0-0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "android-native-activity",
    "webgl2",
]}

[package.metadata.android]
package = "hftvis.ichxtenebra.gachaverse"
build_targets = ["armv7-linux-androideabi"]

[package.metadata.android.sdk]
min_sdk_version = 21
target_sdk_version = 35

[package.metadata.android.application]
label = "Gachaverse"
theme = "@android:style/Theme.NoTitleBar.Fullscreen"
has_code = false
debuggable = false

[package.metadata.android.application.activity]
config_changes = "orientation|keyboardHidden|screenSize"
launch_mode = "singleTask"
orientation = "fullSensor"
hardware_accelerated = true

[package.metadata.android.signing.release]
path = "debug.keystore"
keystore_password = "android"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = "abort"
strip = true
